--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-RESTful==0.3.8
 Flask-JWT==0.3.2
 Werkzeug==1.0.1
 cython==0.29.21
+openpyxl==3.0.5
 pandas==1.2.4
 numpy==1.20.2
 firebase-admin==4.5.1
